v2 con algunas imagenes faltantes

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -8,9 +8,14 @@ files:
   - from: .
     filter:
       - package.json
-      - app
+      - app/**
+      - '!**/node_modules/.cache/**'
+      - '!**/tests/**'
+      - '!**/*.md'
+      - '!**/src/**'
+      - '!**/.*'
 publish: null
-
+asar: true
 win:
   target:
     - portable
